@@ -31,7 +31,7 @@ Do not worry about slowing down of Updates. it`s time to learn Blender c++ codin
 
 # latest Updates
 
-* 'Freeze On' Fix an IK controller in position for wanted frame range 'Animation/Freeze On' (Name and Location is temporary).
+* 'Freeze On' improved ('Animation/Freeze On')
 * [Update History...](https://github.com/NevilArt/BsMax_2_80/blob/master/HISTORY.TXT)
 
 # License
