@@ -1,3 +1,6 @@
+#0,1,0,20210505
+	'Freeze On' Fix an IK controller in position for wanted frame range 'Animation/Freeze On'.
+
 #0,1,0,20210503
 	'W,E,R' auto Coordinate Toggle 'World/Local' disabled by default. 'Ctrl+W' for Active/Deactive (3DsMax mode).
 
